@@ -1,4 +1,11 @@
-2009-05-08  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+2009-05-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	* src/home/hd-render-manager.c (hd_render_manager_place_titlebar_elements):
+	  Make sure the status area actor is moved when it is supposed to.
+	  Fixes the problem when the SA was crammed on the top of the tasks
+	  button.
+
+2009-05-07  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
 	Workaround for 'gadget held portrait, launch calculator case'.
 	Workaround for 'have calculator on top and receive a call'.
